--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,13 @@
         android:textSize="36sp"
         android:layout_gravity="center"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Branch1 Text2 AAlykov"
+        android:textSize="36sp"
+        android:layout_gravity="center"/>
+
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
