--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,14 @@
         android:textSize="36sp"
         android:layout_gravity="center"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Branch1_Text1_AlykovAB"
+        android:textSize="36sp"
+        android:layout_gravity="center"/>
+
+
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
